--- a/Front End/index.html
+++ b/Front End/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
       <link rel="stylesheet" href="style.css">
   </head>
+  <div id=background>
+  <style>
+    body,html{
+      height:100%;
+    }
+  </style>
+</div>
 <body>
   <h1 id="title">Rainfall prediction</h1>
   
